--- a/app/index.html
+++ b/app/index.html
@@ -8,17 +8,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{content-for "head"}}
-
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/question-and-answer.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
 
     {{content-for "head-footer"}}
   </head>
   <body>
     {{content-for "body"}}
-
     <script src="assets/vendor.js"></script>
     <script src="assets/question-and-answer.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
 
     {{content-for "body-footer"}}
   </body>
